<resources>
    <string name="facebook_app_id">[327202266538909]</string>
    <string name="fb_login_protocol_scheme">fb327202266538909</string>
    <string name="facebook_client_token">1748c79790130be5969e3f075312f4f4</string>
    <string name="app_name">CapitalsQuiz</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="visible_password_on_off">Visible password on/off</string>
    <string name="login_uppercase">LOGIN</string>
    <string name="register">Register</string>
    <string name="info">Info</string>
    <string name="start_test">Start</string>
    <string name="your_score">your score</string>
    <string name="back_uppercase">BACK</string>
    <string name="register_uppercase">REGISTER</string>
    <string name="register_1_upper">Register</string>
    <string name="about">About</string>
    <string name="aboutText1">App is developed in 2023 by</string>
    <string name="aboutText2">Aliaksandr Babrouski</string>
    <string name="aboutText3">balexvicx@gmail.com</string>
    <string name="rules_test">rules test</string>
    <string name="logout">Logout</string>
    <string name="please_choose_level">Please, choose level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="capital">Capital</string>
    <string name="country_name">country_name</string>
    <string name="question_number">question_number</string>
    <string name="capital1">capital1</string>
    <string name="background_core">background core</string>
    <string name="max_sec">10</string>
    <string name="quizNum">quiz number</string>
    <string name="scorepoints">scorePoints</string>
    <string name="scoreRight">#4CAF50</string>
    <string name="scoreNull">#85F44336</string>
    <string name="check">check</string>
    <string name="congratulation">Congratulation</string>
    <string name="git_code">https://github.com/Mirage74/capitals-java</string>
    <string name="git_backend">https://github.com/Mirage74/cap-srv</string>
    <string name="last_score">Last score</string>
    <string name="best_score">Best score</string>
    <string name="back">Back</string>
    <string name="capitals_list">Capitals list</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_best_result">View best result</string>
    <string name="view_last_result">View last result</string>
    <string name="view_score">View score</string>
    <string name="enter_country_name">Enter country name</string>
    <string name="enter_capital_name">Enter capital name</string>
    <string name="choose_first_letter_or_enter_name">Choose first letter or enter name</string>
    <string name="enter_part_name">Enter part of the name</string>
    <string name="by_country">By country</string>
    <string name="by_capital">By capital</string>
    <string name="change_font_size">--- change font size ---</string>
    <string name="test_rules">Test rules</string>
    <string name="tvRulesTakePart">question quiz on the capitals of the world! The quiz contains a total of 193 UN (United Nation) member countries. You can see the whole list: Info/Capital list.</string>
    <string name="rulesGroup">\u0020\u0020\u0020Countries are divided into 3 difficulty groups (at the discretion of the author of the application): 1 (Easy), 2 (Medium), 3 (Hard).</string>
    <string name="rulesLvlClarify">\u0020\u0020\u0020Selecting the \'Easy\' level will have only questions from the countries in group 1. When choosing the \'Medium\' level, there will be at least 50% of countries from group 2. When choosing the \'Hard\' level, there will be at least 50% of countries from group 3. You will get points depending on your level and speed of answer, according to the table below:</string>
    <string name="answer_within_sec">Answer within sec:</string>
    <string name="points_easy">points, \'Easy\' :</string>
    <string name="points_medium">points, \'Medium\' :</string>
</resources>