<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unsplash"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoggedUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="100px" />

    <Button
        android:id="@+id/start_test"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_weight="1"
        android:text="@string/start_test" />


    <Button
        android:id="@+id/score"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:text="@string/your_score" />

    <Button
        android:id="@+id/info"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="200dp"
        android:layout_weight="1"
        android:text="@string/info" />

</LinearLayout>