<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/unsplash"
    tools:context=".NotLoggedUser">

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:text="@string/login" />


    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:text="@string/register" />

    <Button
        android:id="@+id/info"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:text="@string/info" />

    <Button
        android:id="@+id/about"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:text="@string/about" />

</LinearLayout>