<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/unsplash"
    tools:context=".Info">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:textSize="35sp" />

    <Button
        android:id="@+id/viewResult"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:text="@string/view_score" />

    <Button
        android:id="@+id/capsList"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="70dp"
        android:textSize="25sp"
        android:text="@string/capitals_list" />

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:text="@string/back" />



</LinearLayout>