<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/unsplash"
    tools:context=".About">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_weight="1"
        android:text="@string/aboutText1"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutText2"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />



    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutText3"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/back_uppercase"
        android:layout_marginBottom="200dp"
        android:textSize="25sp" />

</LinearLayout>