<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutScore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ScoreMain">

    <TextView
        android:id="@+id/congratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/congratulation"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_score"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <Button
        android:id="@+id/switchRes"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/view_best_result"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />


    <FrameLayout
        android:id="@+id/fragLastRes"
        android:name="com.test.capitals.LastResFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>


    <Button
        android:id="@+id/back"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/back_uppercase"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />

</LinearLayout>