<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/unsplash"
    tools:context=".RegisterUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_1_upper"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="120dp" />

    <EditText
        android:id="@+id/user2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:hint="@string/username"
        android:textCursorDrawable="@null"
        android:inputType="text"
        android:drawableStart="@drawable/account"
        android:drawablePadding="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:gravity="start"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textCursorDrawable="@null"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="320dp"
        android:id="@+id/pass2"
        android:gravity="start" />

    <ImageView
        android:id="@+id/toggle_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginStart="330dp"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:src="@drawable/eye_off"
        android:focusable="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_uppercase"
        android:id="@+id/register"
        android:textAllCaps="false"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="510dp"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:background="@drawable/round_button_2"
        android:gravity="center"/>

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="590dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/round_button_2"
        android:gravity="center"
        android:text="@string/back_uppercase"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="25sp" />

</RelativeLayout>